--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: #1f2041;">
   <head>
     <meta charset="utf-8">
     <title>Dog Diggin</title>
